# airflow_test_server

./: .env  .gitignore  Docker.airflow  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dbt/: README.md
dbt/docker/: dbt.Dockerfile
dbt/profiles/: example_profile.yml
monitoring/: prometheus.yml
raw_data/test/: hospital_master_test.csv
scripts/: test_db_connection.py
