[project]
name = "airflow"
version = "0.1.0"
description = ""
authors = [
    {name = "Aaron Feinberg",email = "afeinberg35@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "dbt (>=1.0.0.40.6,<2.0.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
